Use URI instead of URL in test